@@ -1,3 +1,7 @@
+2009-01-05  Mark Ellis  <mark@mpellis.org.uk>
+
+	* redo functions that release the python GIL in pyrex style
+
 2009-01-02  Mark Ellis  <mark@mpellis.org.uk>
 
 	* check for NULL returns from wstr conversions
